        - More use of constexpr throughout the calculation engine.
    ENGINE:
        Class BitManipulatorByType<...>:
            - This is now an internal class in the namespace regina::detail.
              You should never need to refer to this class directly; instead
              you can access its functionality through the end-user class
              BitManipulator<...>.
        Class CallableArg<...>:
            - This is now deprecated, since its implementation is drifting
              increasingly further away from modern C++ standards.
        Class Cut:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Class DiscSpec, DiscSetTet, DiscSetTetData, DiscSetSurface,
                DiscSetSurfaceData:
            - Now uses size_t instead of unsigned long for disc indices and
              disc counts.
            - All constructors that take a normal surface will now throw an
              exception if the surface coordinates are too large.
        Class DivisionByZero:
            - New exception class.
        Class Face<dim, subdim>, FaceNumbering<dim, subdim>, :
            - Major overhaul of the many classes to support face numbering.
              The new structure is simpler thanks to new features of modern
              C++ standards, and several of the old helper classes in
              regina::detail are now gone.
            - New class constant hasNumberingTables to indicate whether lookup
              tables are used for face numbering queries.
        Class FixedArray:
            - Now has a default constructor that creates an empty array.
        Class Flags<T>:
            - Updated to support enumerations with any base C++ integer type,
              not just int.
            - New type alias BaseInt, representing the base C++ integer type.
            - Routines intValue() and fromInt() are deprecated, and replaced