@@ -21,6 +21,15 @@ Version 7.5  [ TODO ]
               You should never need to refer to this class directly; instead
               you can access its functionality through the end-user class
               BitManipulator<...>.
+        Class BoolSet:
+            - Regarding byte codes and string codes:
+              + New type alias ByteCode.
+              + Routine fromByteCode() now throws an exception if the given
+                byte code is not valid.
+              + New routine fromStringCode(), which likewise throws an exception
+                if the given string code is not valid.
+
+              routines.
         Class CallableArg<...>:
             - This is now deprecated, since its implementation is drifting
               increasingly further away from modern C++ standards.
